--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
+    background: url("/images/Background.png");
 }
 ol, ul {
     list-style: none;
