--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 body {
     line-height: 1;
     background: url("/images/Background.png");
+    background-size:cover;
 }
 ol, ul {
     list-style: none;
